[gd_scene load_steps=66 format=3 uid="uid://bncgefqa34vn5"]

[ext_resource type="Texture2D" uid="uid://yh73maj3jv86" path="res://assests/sprites/knight.png" id="1_akhok"]
[ext_resource type="Script" path="res://scripts/player.gd" id="1_ua5nl"]
[ext_resource type="PackedScene" uid="uid://bjv8tlexx0jag" path="res://scenes/healthbar.tscn" id="3_bhsc4"]
[ext_resource type="Texture2D" uid="uid://c2bi4c7vt6tpr" path="res://assests/sprites/excalibur_.png" id="3_ll500"]
[ext_resource type="Script" path="res://scripts/HitBox.gd" id="5_sb0qh"]
[ext_resource type="Script" path="res://scripts/PlayerDamage.gd" id="7_yhub1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dh3w0"]
atlas = ExtResource("1_akhok")
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xnvks"]
atlas = ExtResource("1_akhok")
region = Rect2(32, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4spc"]
atlas = ExtResource("1_akhok")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2g0yd"]
atlas = ExtResource("1_akhok")
region = Rect2(96, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxwea"]
atlas = ExtResource("1_akhok")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_otny5"]
atlas = ExtResource("1_akhok")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iv8wu"]
atlas = ExtResource("1_akhok")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0tvon"]
atlas = ExtResource("1_akhok")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h3t17"]
atlas = ExtResource("1_akhok")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ki5vu"]
atlas = ExtResource("1_akhok")
region = Rect2(160, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fcqjt"]
atlas = ExtResource("1_akhok")
region = Rect2(192, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_67bgr"]
atlas = ExtResource("1_akhok")
region = Rect2(224, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_64an1"]
atlas = ExtResource("1_akhok")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jl6c1"]
atlas = ExtResource("1_akhok")
region = Rect2(32, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xic1x"]
atlas = ExtResource("1_akhok")
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2lm2n"]
atlas = ExtResource("1_akhok")
region = Rect2(96, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sgcka"]
atlas = ExtResource("1_akhok")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vffco"]
atlas = ExtResource("1_akhok")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t3oms"]
atlas = ExtResource("1_akhok")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k5o1x"]
atlas = ExtResource("1_akhok")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v52ai"]
atlas = ExtResource("1_akhok")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mcdwt"]
atlas = ExtResource("1_akhok")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dxpyo"]
atlas = ExtResource("1_akhok")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i04td"]
atlas = ExtResource("1_akhok")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u26qd"]
atlas = ExtResource("1_akhok")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iufny"]
atlas = ExtResource("1_akhok")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gaxo2"]
atlas = ExtResource("1_akhok")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_17xdt"]
atlas = ExtResource("1_akhok")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jkl3c"]
atlas = ExtResource("1_akhok")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ty3k"]
atlas = ExtResource("1_akhok")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wrekh"]
atlas = ExtResource("1_akhok")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mv5tc"]
atlas = ExtResource("1_akhok")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fah20"]
atlas = ExtResource("1_akhok")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rfxtp"]
atlas = ExtResource("1_akhok")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ndy7"]
atlas = ExtResource("1_akhok")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3do8j"]
atlas = ExtResource("1_akhok")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbcye"]
atlas = ExtResource("1_akhok")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dfk0c"]
atlas = ExtResource("1_akhok")
region = Rect2(224, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_khfo2"]
atlas = ExtResource("1_akhok")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s3du1"]
atlas = ExtResource("1_akhok")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g6png"]
atlas = ExtResource("1_akhok")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fthdy"]
atlas = ExtResource("1_akhok")
region = Rect2(224, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_vylop"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dh3w0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xnvks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4spc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2g0yd")
}],
"loop": false,
"name": &"death",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxwea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_otny5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iv8wu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0tvon")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h3t17")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ki5vu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fcqjt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_67bgr")
}],
"loop": true,
"name": &"dodge",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_64an1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jl6c1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xic1x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xic1x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2lm2n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sgcka")
}],
"loop": false,
"name": &"hit",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vffco")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t3oms")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k5o1x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v52ai")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mcdwt")
}],
"loop": true,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxpyo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i04td")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u26qd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iufny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gaxo2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_17xdt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jkl3c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ty3k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wrekh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mv5tc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fah20")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rfxtp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ndy7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3do8j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbcye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dfk0c")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_khfo2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s3du1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g6png")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fthdy")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_mt23d"]
radius = 6.0

[sub_resource type="AtlasTexture" id="AtlasTexture_mcky1"]
atlas = ExtResource("3_ll500")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpc0f"]
atlas = ExtResource("3_ll500")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n3duj"]
atlas = ExtResource("3_ll500")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h42xh"]
atlas = ExtResource("3_ll500")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5d8wq"]
atlas = ExtResource("3_ll500")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f7gim"]
atlas = ExtResource("3_ll500")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hujh"]
atlas = ExtResource("3_ll500")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bmpon"]
atlas = ExtResource("3_ll500")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hwfqa"]
atlas = ExtResource("3_ll500")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aehth"]
atlas = ExtResource("3_ll500")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0f0g6"]
atlas = ExtResource("3_ll500")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s74n3"]
atlas = ExtResource("3_ll500")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_83ddo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mcky1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpc0f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n3duj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h42xh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5d8wq")
}],
"loop": false,
"name": &"attack1",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f7gim")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hujh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hujh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bmpon")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bmpon")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hujh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hujh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwfqa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aehth")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0f0g6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f7gim")
}],
"loop": false,
"name": &"attack2",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s74n3")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2u0rq"]
size = Vector2(14, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rxurn"]
size = Vector2(13, 19)

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_ua5nl")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.106
one_shot = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_vylop")
animation = &"hit"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_mt23d")

[node name="HealthBar" parent="." instance=ExtResource("3_bhsc4")]
offset_left = -19.0
offset_top = -27.0
offset_right = 19.0
offset_bottom = -24.0

[node name="Timer2" type="Timer" parent="."]
one_shot = true

[node name="AttackAnimation" type="AnimatedSprite2D" parent="."]
visible = false
z_index = -1
position = Vector2(7, -10)
rotation = 0.970403
scale = Vector2(0.592895, 1.1635)
sprite_frames = SubResource("SpriteFrames_83ddo")
animation = &"attack2"

[node name="HitBox" type="Area2D" parent="."]
script = ExtResource("5_sb0qh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(13, -9)
shape = SubResource("RectangleShape2D_2u0rq")
disabled = true

[node name="PlayerDamage" type="Area2D" parent="."]
script = ExtResource("7_yhub1")

[node name="HurtArea" type="CollisionShape2D" parent="PlayerDamage"]
position = Vector2(-1, -10)
shape = SubResource("RectangleShape2D_rxurn")

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="HitTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
[connection signal="animation_finished" from="AttackAnimation" to="." method="_on_attack_animation_animation_finished"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
[connection signal="timeout" from="HitTimer" to="." method="_on_hit_timer_timeout"]
